<?xml version="1.0" encoding="utf-8"?>
<!--
Nama : Rama Ramdani
NIM : 10119181
Kelas : IF-5
Tgl Pengerjaan : 25 April 2022
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost"
            android:textColor="@color/white"
            android:textSize="50dp"
            android:gravity="center"
            android:layout_marginTop="200dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step"
            android:textColor="@color/white"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active"
            android:textColor="@color/white"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Pindah"
            android:background="@drawable/shape"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/verify"
            app:backgroundTint="@null"/>
    </LinearLayout>
</LinearLayout>